--- a/csvtk/csvtk.nuspec
+++ b/csvtk/csvtk.nuspec
@@ -26,9 +26,7 @@
 - **Fast**,  **multiple-CPUs supported** (some commands)
 - **Practical functions provided by N subcommands**
 - **Support STDIN and gziped input/output file, easy being used in pipe**
-- Most of the subcommands support ***unselecting fields*** and ***fuzzy fields***,
-  e.g. `-f "-id,-name"` for all fields except "id" and "name",
-  `-F -f "a.*"` for all fields with prefix "a.".
+- Most of the subcommands support ***unselecting fields*** and ***fuzzy fields***, e.g. `-f "-id,-name"` for all fields except "id" and "name", `-F -f "a.*"` for all fields with prefix "a.".
 - **Support some common plots** (see [usage](http://bioinf.shenwei.me/csvtk/usage/#plot))
 
 ### For more information about csvtk see [the official README.md](https://github.com/shenwei356/csvtk/blob/master/README.md).
