clipstudio-paint projecturl changed to english

--- a/clipstudio-paint/clipstudio-paint.nuspec
+++ b/clipstudio-paint/clipstudio-paint.nuspec
@@ -7,7 +7,7 @@
     <owners>Jakub Levý</owners>
     <title>Clip Studio Paint</title>
     <authors>CELSYS Inc.</authors>
-    <projectUrl>https://www.clipstudio.net</projectUrl>
+    <projectUrl>https://www.clipstudio.net/en</projectUrl>
     <iconUrl>https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/icons/clipstudio-paint.png</iconUrl>
     <copyright>Copyright (c) CELSYS, Inc. All Rights Reserved.</copyright>
     <licenseUrl>https://www.celsys.co.jp/en/information/csp</licenseUrl>
