--- a/kawanime/kawanime.nuspec
+++ b/kawanime/kawanime.nuspec
@@ -44,9 +44,9 @@ Feel free to check the official website for [a demo of all the available feature
     - Default value: `$env:ProgramFiles\KawAnime`
 
 ### Examples
-* Install into `D:\kawanime` for the current user only
+* Install into `C:\Users\Joe\kawanime` for the current user (Joe) only
     ```
-    choco install kawanime --params "'/InstallForAllUsers:no /InstallDir:D:\kawanime'"
+    choco install kawanime --params "'/InstallForAllUsers:no /InstallDir:C:\Users\Joe\kawanime'"
     ```
     </description>
 <releaseNotes>https://github.com/Kylart/KawAnime/releases/tag/v0.4.2</releaseNotes>
