--- a/kawanime/kawanime.nuspec
+++ b/kawanime/kawanime.nuspec
@@ -7,7 +7,7 @@
     <owners>Jakub Levý</owners>
     <title>KawAnime</title>
     <authors>Kylart</authors>
-    <projectUrl>https://github.com/Kylart/KawAnime</projectUrl>
+    <projectUrl>https://kawanime.com</projectUrl>
     <iconUrl>https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/icons/kawanime.png</iconUrl>
     <copyright>Copyright (c) 2016-2020, Kylart</copyright>
     <licenseUrl>https://github.com/Kylart/KawAnime/blob/dev/LICENSE</licenseUrl>
