added kindlegen dependency for kindle-comic-converter

--- a/kindle-comic-converter/kindle-comic-converter.nuspec
+++ b/kindle-comic-converter/kindle-comic-converter.nuspec
@@ -40,7 +40,7 @@ KCC can understand and convert from, at the moment, the following input types:
 * MOBI/AZW3 (see [MOBI support](#mobi-support))
 
 ## MOBI support
-To support output to MOBI files, you have to download KindleGen manually and place *kindlegen.exe* into directory where KCC is installed.
+Support for MOBI files is provided by [kindlegen](https://community.chocolatey.org/packages/kindlegen) dependency.
 
 ## Parameters
 * `/InstallationPath:` - where to install the binaries
@@ -69,6 +69,9 @@ To support output to MOBI files, you have to download KindleGen manually and pla
     ```
     </description>
 <releaseNotes>https://github.com/ciromattia/kcc/blob/5.5.2/CHANGELOG.md</releaseNotes>
+<dependencies>
+    <dependency id="kindlegen" version="2.9.0.20210511" />
+  </dependencies>
 </metadata>
   <files>
     <file src="tools\**" target="tools" />
