--- a/kindle-comic-converter/kindle-comic-converter.nuspec
+++ b/kindle-comic-converter/kindle-comic-converter.nuspec
@@ -15,7 +15,7 @@
     <projectSourceUrl>https://github.com/ciromattia/kcc</projectSourceUrl>
     <docsUrl>https://github.com/ciromattia/kcc/wiki</docsUrl>
     <bugTrackerUrl>https://github.com/ciromattia/kcc/wiki/Known-issues</bugTrackerUrl>
-    <tags>kindle ebook manga convert cbz epub mobi</tags>
+    <tags>kindle ebook manga convert cbz epub mobi kindlegen</tags>
     <summary>App to convert comic/manga files to EPUB, Panel View MOBI or E-Ink optimized CBZ.</summary>
     <description>
 **NOTE:** The following text is for the most part an excerpt from the official [README.md](https://github.com/ciromattia/kcc/blob/master/README.md).
@@ -42,7 +42,7 @@ KCC can understand and convert from, at the moment, the following input types:
 ## MOBI support
 Support for MOBI files is provided by [kindlegen](https://community.chocolatey.org/packages/kindlegen) dependency.
 
-## Parameters
+## Installation Parameters
 * `/InstallationPath:` - where to install the binaries
     - Default value: `"$env:ProgramFiles\Kindle Comic Converter"`
 * `/CreateDesktopIcon` - creates a desktop icon
