--- a/winfetch/winfetch.nuspec
+++ b/winfetch/winfetch.nuspec
@@ -30,7 +30,7 @@ The information by default is displayed alongside your operating system's logo. 
 
 According to benchmarks done with Hyperfine, Winfetch on Windows is faster than Neofetch running on Bash emulators like MSYS (Git Bash) or Cygwin.
 
-## Parameters
+## Installation Parameters
 * `/AddToSystemPath:` - should `"$(Get-ToolsLocation)\winfetch"` be added to the System Path variable
     - Default value: `yes`
 * `/AddToUserPath:` - should `"$(Get-ToolsLocation)\winfetch"` be added to the User Path variable
