--- a/glpk/glpk.nuspec
+++ b/glpk/glpk.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>glpk</id>
-    <version>4.65</version>
+    <version>4.65.20210830</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/glpk</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>GNU Linear Programming Kit</title>
