InstallDir added for revoSleep

--- a/visualkernel/visualkernel.nuspec
+++ b/visualkernel/visualkernel.nuspec
@@ -30,8 +30,9 @@ VisualKernel integrates Linux kernel debugging into Visual Studio.
 
 ## Installation Parameters
 * `/InstallDir:` - where to install the binaries
-  - `"${env:ProgramFiles(x86)}\Sysprogs\VisualKernel"` on 64-bit Windows
-  - `"$env:ProgramFiles\Sysprogs\VisualKernel"` on 32-bit Windows
+  - Default value:
+    - `"${env:ProgramFiles(x86)}\Sysprogs\VisualKernel"` on 64-bit Windows
+    - `"$env:ProgramFiles\Sysprogs\VisualKernel"` on 32-bit Windows
 
 ### Examples
 * Install into `D:\VisualKernel` directory
