--- a/visualgdb/visualgdb.nuspec
+++ b/visualgdb/visualgdb.nuspec
@@ -24,14 +24,15 @@ VisualGDB integrates the GNU toolchain (GCC/GDB) into Visual Studio. With Visual
 
 ## Installation Parameters
 * `/InstallDir:` - where to install the binaries
-  - `"${env:ProgramFiles(x86)}\Sysprogs\VisualGDB"` on 64-bit Windows
-  - `"$env:ProgramFiles\Sysprogs\VisualGDB"` on 32-bit Windows
+  - Default value:
+    - `"${env:ProgramFiles(x86)}\Sysprogs\VisualGDB"` on 64-bit Windows
+    - `"$env:ProgramFiles\Sysprogs\VisualGDB"` on 32-bit Windows
 
 ### Examples
 * Install into `D:\VisualGDB` directory
   ```
   choco install visualgdb --params "/InstallDir:D:\visualgdb"
-  ```        
+  ```     
     </description>
     <releaseNotes>https://visualgdb.com/history</releaseNotes>
   </metadata>
