--- a/gprolog-mingw/gprolog-mingw.nuspec
+++ b/gprolog-mingw/gprolog-mingw.nuspec
@@ -19,7 +19,7 @@
     <tags>prolog solver prover constraint logic programming language gnu</tags>
     <summary>GNU Prolog is a free Prolog compiler with constraint solving over finite domains.</summary>
     <description>
-**NOTE:** This package installs a version compiled with MinGW. The version compiled with MSVC is available as a [gprolog-msvc](https://community.chocolatey.org/packages/gprolog-msvc) package.
+**NOTE:** This package installs a version compiled with MinGW. The version compiled with MSVC is available as [gprolog-msvc](https://community.chocolatey.org/packages/gprolog-msvc) package.
 
 **NOTE:** The following text is for the most part an excerpt from [the official website](http://www.gprolog.org).
 
