--- a/gprolog-msvc/gprolog-msvc.nuspec
+++ b/gprolog-msvc/gprolog-msvc.nuspec
@@ -19,7 +19,7 @@
     <tags>prolog solver prover constraint logic programming language gnu</tags>
     <summary>GNU Prolog is a free Prolog compiler with constraint solving over finite domains.</summary>
     <description>
-**NOTE:** This package installs a version compiled with MSVC. The version compiled with MinGW is available as a [gprolog-mingw](https://community.chocolatey.org/packages/gprolog-mingw) package.
+**NOTE:** This package installs a version compiled with MSVC. The version compiled with MinGW is available as [gprolog-mingw](https://community.chocolatey.org/packages/gprolog-mingw) package.
 
 **NOTE:** The following text is for the most part an excerpt from [the official website](http://www.gprolog.org).
 
