--- a/spicetify-cli/spicetify-cli.nuspec
+++ b/spicetify-cli/spicetify-cli.nuspec
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>spicetify-cli</id>
-    <version>2.6.1</version>
+    <version>2.6.2</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/spicetify-cli</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>Spicetify</title>
@@ -17,8 +17,7 @@
     <bugTrackerUrl>https://github.com/khanhas/spicetify-cli/issues</bugTrackerUrl>
     <tags>spotify commandline customize cross-platform</tags>
     <summary>A command-line tool to customize Spotify client.</summary>
-    <description>
-![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/spicetify-cli/logo.png)
+    <description><![CDATA[![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/spicetify-cli/logo.png)
 
 A command-line tool to customize new Spotify client (v1.1.58 or later). Supports Windows, MacOS and Linux.
 
@@ -35,8 +34,8 @@ A command-line tool to customize new Spotify client (v1.1.58 or later). Supports
 * [Extensions](https://github.com/khanhas/spicetify-cli/wiki/Extensions)
 * [Custom Apps](https://github.com/khanhas/spicetify-cli/wiki/Custom-Apps)
 * [Wiki](https://github.com/khanhas/spicetify-cli/wiki)
-    </description>
-<releaseNotes>https://github.com/khanhas/spicetify-cli/releases/tag/v2.6.1</releaseNotes>
+]]></description>
+<releaseNotes>https://github.com/khanhas/spicetify-cli/releases/tag/v2.6.2</releaseNotes>
 </metadata>
   <files>
     <file src="tools\**" target="tools" />
