spotify-tui added

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 *.exe
-*.tar
-*.gz
-*.zip
-*.7z
-*.xz
-*.rar
 *.nupkg
+
 winfetch/tools/winfetch.ps1
+
+*.7z
+*.gz
+*.rar
+*.tar
+*.xz
+*.zip
+*.zstd
