--- a/memento.install/memento.install.nuspec
+++ b/memento.install/memento.install.nuspec
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
-    <id>memento.portable</id>
+    <id>memento.install</id>
     <version>0.5.1</version>
-    <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/memento.portable</packageSourceUrl>
+    <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/memento.install</packageSourceUrl>
     <owners>Jakub Levý</owners>
-    <title>Memento (Portable)</title>
+    <title>Memento (Install)</title>
     <authors>Ripose</authors>
     <projectUrl>https://ripose-jp.github.io/Memento</projectUrl>
     <iconUrl>https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/icons/memento.png</iconUrl>
@@ -17,7 +17,8 @@
     <bugTrackerUrl>https://github.com/ripose-jp/Memento/issues</bugTrackerUrl>
     <tags>learning education flashcards language-learning audio video mpv japanese spaced-repetition SRS anki yomichan</tags>
     <summary>Memento is a FOSS, mpv-based video player for studying Japanese.</summary>
-    <description><![CDATA[**NOTE:** The following text is an excerpt from [the official website](https://ripose-jp.github.io/Memento).
+    <description>
+**NOTE:** The following text is an excerpt from [the official website](https://ripose-jp.github.io/Memento).
 
 # Memento
 A FOSS, mpv-based video player for studying Japanese.
@@ -45,10 +46,21 @@ Supports mpv configuration files such as input.conf for rebinding keys and mpv.c
 
 ### Streaming
 Supports streaming from many websites through [youtube-dl](https://community.chocolatey.org/packages/youtube-dl).
-]]></description>
+
+## Installation Parameters
+* `/InstallDir:` - where to install the binaries
+  - Default value: `"$env:ProgramFiles\Memento"`
+
+### Examples
+* Install into `D:\memento` directory
+  ```
+  choco install memento --params "/InstallDir:D:\memento"
+  ```
+    </description>
     <releaseNotes>https://github.com/ripose-jp/Memento/releases/tag/v0.5.1-beta</releaseNotes>
     <dependencies>
       <dependency id="vcredist2010" version="10.0.40219.325" />
+      <dependency id="autohotkey.portable" version="1.1.30.00" />
     </dependencies>
   </metadata>
   <files>
