spicetify README.md updated

--- a/spicetify-cli/spicetify-cli.nuspec
+++ b/spicetify-cli/spicetify-cli.nuspec
@@ -19,7 +19,7 @@
     <summary>A command-line tool to customize Spotify client.</summary>
     <description><![CDATA[![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/spicetify-cli/logo.png)
 
-A command-line tool to customize new Spotify client (v1.1.58 or later). Supports Windows, MacOS and Linux.
+A command-line tool to customize Spotify client. Supports Windows, MacOS and Linux.
 
 ## Features
 * Change colors of whole UI
