clipstudio-paint updated to 1.11.2

--- a/analyzer2go/analyzer2go.nuspec
+++ b/analyzer2go/analyzer2go.nuspec
@@ -15,7 +15,7 @@
     <tags>logic analyzer devkit development board IOT sysprogs trial</tags>
     <summary>Turn your development board into a logic analyzer!</summary>
     <description> 
-**NOTE:** This is commercial software with 15-day trial period, after expiration a valid license key is required. You can purchase one from [the official website](https://sysprogs.com/analyzer2go).
+**NOTE:** This is commercial software with 15-day trial period, after expiration, a valid license key is required. You can purchase one from [the official website](https://sysprogs.com/analyzer2go).
 
 # Analyzer2Go
 Analyzer2Go is an application that turns your development board into a logic analyzer.
