--- a/painttoolsai/painttoolsai.nuspec
+++ b/painttoolsai/painttoolsai.nuspec
@@ -17,7 +17,7 @@
     <tags>art illustration draw drawing paint painting tablet pen graphics design systemax trial</tags>
     <summary>PaintTool SAI is high quality and lightweight painting software for amazing anti-aliased paintings.</summary>
     <description>
-**NOTE:** This is commercial software with a trial period, after expiration a valid license is required. You can purchase one from [the official website](https://www.systemax.jp/en/sai).
+**NOTE:** This is commercial software with a trial period, after expiration, a valid license is required. You can purchase one from [the official website](https://www.systemax.jp/en/sai).
 
 ![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/painttoolsai/sai_logo.png)
 
