--- a/visualgdb/visualgdb.nuspec
+++ b/visualgdb/visualgdb.nuspec
@@ -15,7 +15,7 @@
     <tags>visual studio VS cross-platform gdb linux c c++ native dev IOT sysprogs trial</tags>
     <summary>Serious Cross-Platform for Visual Studio!</summary>
     <description> 
-**NOTE:** This is commercial software with 30-day trial period, after expiration a valid license key is required. You can purchase one from [the official website](https://visualgdb.com).
+**NOTE:** This is commercial software with 30-day trial period, after expiration, a valid license key is required. You can purchase one from [the official website](https://visualgdb.com).
 
 **NOTE:** VisualGDB requires Microsoft Visual Studio as a dependency, see [system requirements](https://visualgdb.com/download).
 
