--- a/visualkernel/visualkernel.nuspec
+++ b/visualkernel/visualkernel.nuspec
@@ -15,7 +15,7 @@
     <tags>visual studio VS cross-platform debug linux kernel space c dev sysprogs trial</tags>
     <summary>VisualKernel integrates Linux kernel debugging into Visual Studio.</summary>
     <description> 
-**NOTE:** This is commercial software with 30-day trial period, after expiration a valid license key is required. You can purchase one from [the official website](https://sysprogs.com/VisualKernel).
+**NOTE:** This is commercial software with 30-day trial period, after expiration, a valid license key is required. You can purchase one from [the official website](https://sysprogs.com/VisualKernel).
 
 **NOTE:** VisualKernel requires Microsoft Visual Studio as a dependency, see [system requirements](https://sysprogs.com/VisualKernel/download).
 
