--- a/netlimiter/netlimiter.nuspec
+++ b/netlimiter/netlimiter.nuspec
@@ -17,7 +17,7 @@
     <tags>netlimiter network limiter admin internet monitor bandwith filter block trial</tags>
     <summary>NetLimiter is an ultimate internet traffic control and monitoring tool.</summary>
     <description>
-**NOTE:** This is commercial software with 28-day trial period, after expiration a valid license key is required. You can purchase one from [the official website](https://www.netlimiter.com/buy/nl4pro).
+**NOTE:** This is commercial software with 28-day trial period, after expiration, a valid license key is required. You can purchase one from [the official website](https://www.netlimiter.com/buy/nl4pro).
 
 **NOTE:** The following text is for the most part an excerpt from [the official website](https://www.netlimiter.com/products/nl4).
 
