--- a/proficad.install/proficad.install.nuspec
+++ b/proficad.install/proficad.install.nuspec
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>proficad.install</id>
-    <version>11.2.2</version>
+    <version>11.3.0</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/proficad.install</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>ProfiCAD (Install)</title>
@@ -13,8 +13,7 @@
     <docsUrl>https://www.proficad.com/ProfiCAD.pdf</docsUrl>
     <tags>CAD drawing schematic diagram electronic circuit</tags>
     <summary>App designed for drawing of electrical and electronic diagrams, schematics, control circuit diagrams and can also be used for pneumatics, hydraulics and other types of technical diagrams.</summary>
-    <description>
-**NOTE:** The following text is for the most part an excerpt from [the official website](https://www.proficad.com).
+    <description><![CDATA[**NOTE:** The following text is for the most part an excerpt from [the official website](https://www.proficad.com).
 
 # ProfiCAD
 ProfiCAD is designed for drawing of [electrical and electronic diagrams](https://www.proficad.com/screenshots.aspx), schematics, control circuit diagrams and can also be used for pneumatics, hydraulics and other types of technical diagrams. 
@@ -47,7 +46,7 @@ The non-commercial (home) edition is distributed [free of charge](https://www.pr
     ```
     choco install proficad --params "/InstallationPath:D:\ProfiCAD"
     ```
-    </description>
+]]></description>
 <releaseNotes>https://www.proficad.com/news.aspx</releaseNotes>
 </metadata>
   <files>
