material-maker updated to 0.97

--- a/material-maker.portable/material-maker.portable.nuspec
+++ b/material-maker.portable/material-maker.portable.nuspec
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>material-maker.portable</id>
-    <version>0.96</version>
+    <version>0.97</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/material-maker.portable</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>Material Maker (Portable)</title>
@@ -17,8 +17,7 @@
     <bugTrackerUrl>https://github.com/RodZill4/material-maker/issues</bugTrackerUrl>
     <tags>procedural-generation glsl godotengine godot-engine painting textures texture-synthesis</tags>
     <summary>A procedural textures authoring and 3D model painting tool based on the Godot game engine.</summary>
-    <description>
-# Material Maker
+    <description><![CDATA[# Material Maker
 This is a tool based on [Godot Engine](https://godotengine.org) that can be used to create textures procedurally and paint 3D models.
 
 Its user interface is based on Godot's GraphEdit node: textures and brushes are described as interconnected nodes.
@@ -29,8 +28,8 @@ Its user interface is based on Godot's GraphEdit node: textures and brushes are 
 
 ## Screenshot
 ![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/material-maker/screenshot.png)
-    </description>
-<releaseNotes>https://github.com/RodZill4/material-maker/releases/tag/0.96</releaseNotes>
+]]></description>
+<releaseNotes>https://github.com/RodZill4/material-maker/releases/tag/0.97</releaseNotes>
 </metadata>
   <files>
     <file src="tools\**" target="tools" />
