--- a/winfetch/winfetch.nuspec
+++ b/winfetch/winfetch.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>winfetch</id>
-    <version>2.2.0</version>
+    <version>2.3.0</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/winfetch</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>winfetch</title>
@@ -17,8 +17,7 @@
     <bugTrackerUrl>https://github.com/kiedtl/winfetch/issues</bugTrackerUrl>
     <tags>neofetch screenfetch commandline cli systeminfo info screenshot</tags>
     <summary>🛠 A command-line system information utility written in PowerShell. Like Neofetch, but for Windows.</summary>
-    <description>
-![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/winfetch/logo.png)
+    <description><![CDATA[![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/winfetch/logo.png)
 
 ![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/winfetch/preview.png)
 
@@ -45,8 +44,8 @@ According to benchmarks done with Hyperfine, Winfetch on Windows is faster than 
     ```
     choco install winfetch --params "'/AddToSystemPath:no /AddToUserPath:no'"
     ```
-    </description>
-<releaseNotes>https://github.com/kiedtl/winfetch/releases/tag/v2.2.0</releaseNotes>
+]]></description>
+<releaseNotes>https://github.com/kiedtl/winfetch/releases/tag/v2.3.0</releaseNotes>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
