spicetify-cli 2.7.2 warning added

--- a/spicetify-cli/spicetify-cli.nuspec
+++ b/spicetify-cli/spicetify-cli.nuspec
@@ -17,7 +17,10 @@
     <bugTrackerUrl>https://github.com/khanhas/spicetify-cli/issues</bugTrackerUrl>
     <tags>spotify commandline customize cross-platform</tags>
     <summary>A command-line tool to customize Spotify client.</summary>
-    <description><![CDATA[![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/spicetify-cli/logo.png)
+    <description>
+**ATTENTION**: Version 2.7.2 has been flagged by the virus scanner (see scan results down below). The developers of spicetify-cli have been informed about that. Please see more information https://github.com/khanhas/spicetify-cli/issues/1233 and https://github.com/khanhas/spicetify-cli/issues/1244.
+
+![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/spicetify-cli/logo.png)
 
 A command-line tool to customize Spotify client. Supports Windows, MacOS and Linux.
 
@@ -34,7 +37,7 @@ A command-line tool to customize Spotify client. Supports Windows, MacOS and Lin
 * [Extensions](https://github.com/khanhas/spicetify-cli/wiki/Extensions)
 * [Custom Apps](https://github.com/khanhas/spicetify-cli/wiki/Custom-Apps)
 * [Wiki](https://github.com/khanhas/spicetify-cli/wiki)
-]]></description>
+  </description>
 <releaseNotes>https://github.com/khanhas/spicetify-cli/releases/tag/v2.7.2</releaseNotes>
 </metadata>
   <files>
