--- a/ddcpuid/ddcpuid.nuspec
+++ b/ddcpuid/ddcpuid.nuspec
@@ -8,7 +8,7 @@
     <title>ddcpuid</title>
     <authors>dd86k</authors>
     <projectUrl>https://github.com/dd86k/ddcpuid</projectUrl>
-    <copyright>Copyright (c) 2016-2021 dd86k dd@dax.moe</copyright>
+    <copyright>Copyright (c) 2016-2021</copyright>
     <licenseUrl>https://github.com/dd86k/ddcpuid/blob/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <projectSourceUrl>https://github.com/dd86k/ddcpuid</projectSourceUrl>
