--- a/winfetch/winfetch.nuspec
+++ b/winfetch/winfetch.nuspec
@@ -17,7 +17,8 @@
     <bugTrackerUrl>https://github.com/kiedtl/winfetch/issues</bugTrackerUrl>
     <tags>neofetch screenfetch commandline cli systeminfo info screenshot</tags>
     <summary>🛠 A command-line system information utility written in PowerShell. Like Neofetch, but for Windows.</summary>
-    <description><![CDATA[![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/winfetch/logo.png)
+    <description>
+![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/winfetch/logo.png)
 
 ![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/winfetch/preview.png)
 
@@ -31,8 +32,10 @@ According to benchmarks done with Hyperfine, Winfetch on Windows is faster than 
 
 ## Installation Parameters
 * `/AddToSystemPath:` - should `"$(Get-ToolsLocation)\winfetch"` be added to the System Path variable
+    - Supported values: `yes`, `no`
     - Default value: `yes`
 * `/AddToUserPath:` - should `"$(Get-ToolsLocation)\winfetch"` be added to the User Path variable
+    - Supported values: `yes`, `no`
     - Default value: `no`
 
 ### Examples
@@ -44,7 +47,7 @@ According to benchmarks done with Hyperfine, Winfetch on Windows is faster than 
     ```
     choco install winfetch --params "'/AddToSystemPath:no /AddToUserPath:no'"
     ```
-]]></description>
+    </description>
 <releaseNotes>https://github.com/kiedtl/winfetch/releases/tag/v2.3.0</releaseNotes>
   </metadata>
   <files>
