--- a/pdftk-java/pdftk-java.nuspec
+++ b/pdftk-java/pdftk-java.nuspec
@@ -9,10 +9,10 @@
     <authors>Marc Vinyals,Steward and Lee LLC,Bruno Lowagie,Paulo Soares</authors>
     <projectUrl>https://gitlab.com/pdftk-java/pdftk</projectUrl>
     <copyright>
-Copyright (c) 2017-2018 Marc Vinyals
-Copyright (c) 2003-2013 Steward and Lee, LLC
-pdftk includes a modified version of the iText library.
-Copyright (c) 1999-2009 Bruno Lowagie, Paulo Soares, et al.
+      Copyright (c) 2017-2018 Marc Vinyals
+      Copyright (c) 2003-2013 Steward and Lee, LLC
+      pdftk includes a modified version of the iText library.
+      Copyright (c) 1999-2009 Bruno Lowagie, Paulo Soares, et al.
     </copyright>
     <licenseUrl>https://gitlab.com/pdftk-java/pdftk/-/blob/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
@@ -32,16 +32,21 @@ The current goals are to keep functionality as compatible with the original as i
 * Java Runtime ≥ 8
 
 ## Installation Parameters
-* `/JavaExePath:` - Path to `java.exe`
-    - Default value: (in the following order)
-        - `"$env:ChocolateyInstall\bin\java.exe"` if exists
-        - `"$env:JAVA_HOME\bin\java.exe"` if `$env:JAVA_HOME` is defined
-        - `"$env:ChocolateyInstall\bin\java.exe"` otherwise
+* `/AddToSystemPath:` - should `"$(Get-ToolsLocation)\pdftk-java"` be added to the System Path variable
+    - Supported values: `yes`, `no`
+    - Default value: `yes`
+* `/AddToUserPath:` - should `"$(Get-ToolsLocation)\pdftk-java"` be added to the User Path variable
+    - Supported values: `yes`, `no`
+    - Default value: `no`
 
 ### Examples
-* Install and configure pdftk to use `C:\openjdk-11.0.13_8\bin\java.exe` as Java executable
+* Install and add only to the User Path variable
     ```
-    choco install pdftk-java --params "/JavaExePath:C:\openjdk-11.0.13_8\bin\java.exe"
+    choco install pdftk-java --params "'/AddToUserPath:yes /AddToSystemPath:no'"
+    ```
+* Install and do not add anything to environment variables
+    ```
+    choco install pdftk-java --params "'/AddToSystemPath:no /AddToUserPath:no'"
     ```
     </description>
     <releaseNotes>https://gitlab.com/pdftk-java/pdftk/-/blob/v3.3.1/CHANGELOG.md</releaseNotes>
