--- a/spicetify-marketplace/spicetify-marketplace.nuspec
+++ b/spicetify-marketplace/spicetify-marketplace.nuspec
@@ -6,7 +6,7 @@
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/spicetify-marketplace</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>Spicetify Marketplace</title>
-    <authors>CharlieS1103</authors>
+    <authors>CharlieS1103,theRealPadster</authors>
     <projectUrl>https://github.com/CharlieS1103/spicetify-marketplace</projectUrl>
     <copyright>Copyright (c) 2021 CharlieS1103</copyright>
     <licenseUrl>https://github.com/CharlieS1103/spicetify-marketplace/blob/main/LICENSE</licenseUrl>
@@ -21,7 +21,7 @@
 
 Download Extensions and Themes Directly from within [Spicetify](https://community.chocolatey.org/packages/spicetify-cli). 
 
-Based on the [reddit Custom App](https://github.com/khanhas/spicetify-cli/wiki/Custom-Apps#reddit)
+Based on the [reddit Custom App](https://github.com/khanhas/spicetify-cli/wiki/Custom-Apps#reddit).
 
 ## Disclaimer
 All extensions are from community. They might contain unwanted code. Be careful what you install, or review the code before use. We hold no responsibility for these extensions or anything installed via this custom app. If you find a malicious extension, please [submit an issue](https://github.com/CharlieS1103/spicetify-marketplace/issues/new?template=malicious-extension-report.md) and we can add it to the [blacklist](blacklist.json). 
@@ -35,6 +35,7 @@ This project is a work-in-progress and is not finished, polished, or guaranteed 
 <releaseNotes>https://github.com/CharlieS1103/spicetify-marketplace/releases/tag/v0.3.1-alpha</releaseNotes>
 <dependencies>
   <dependency id="spicetify-cli" version="2.8.0" />
+  <dependency id="chocolatey-core.extension" version="1.1.0" />
 </dependencies>
 </metadata>
   <files>
